# pixi_ros2_osx-arm64

./: LICENSE  README.md
scripts/: cam_test.py
src/: webcam_publisher.py
src/webcam_image_publisher/: package.xml  setup.py
src/webcam_image_publisher/launch/: webcam_launch.py
src/webcam_image_publisher/resource/: webcam_image_publisher
src/webcam_image_publisher/webcam_image_publisher/: setup.cfg  webcam_node.py
